--- a/Books/Views/Shared/_Layout.cshtml
+++ b/Books/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="Index">Books Management</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="SearchPage">Search Page</a>
+                        </li>
                     </ul>
                 </div>
             </div>
