--- a/Books/Views/Book/Index.cshtml
+++ b/Books/Views/Book/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IEnumerable<Books.Models.BookModel>
 
 <p>
-    <a asp-action="Create">Create New</a><br />
-    Number of found books is :<p class="bg-success">@ViewBag.BookCout</p>
+    <a asp-action="CreateForm">Create New</a><br />
+    Total of found books :<p class="bg-success">@ViewBag.BookCout</p>
 </p>
 
 <div class="container d-flex flex-wrap">
@@ -11,7 +11,7 @@
 
         <div class="card" style="width: 18rem;">
             <!--<img class="card-img-top" src="..." alt="Card image cap">-->
-            <div class="card-body bg-secondary">
+            <div class="card-body bg-light">
                 <h5 class="card-title">@item.Title</h5>
                 <p class="card-text">
                     @item.Author<br />
@@ -19,68 +19,12 @@
                     @item.Genre<br />
                     @item.Price
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Tell me more</a>
+                <a href="#" class="btn btn-warning">Edit this copy</a>
+                <a href="#" class="btn btn-danger">Delete this shit</a>
             </div>
         </div>
 
     }
 </div>
 
-<!--
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Id)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Title)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Author)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.NumberOfPages)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Genre)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Price)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Id)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Title)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Author)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.NumberOfPages)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Genre)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Price)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                        @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-    -->
