--- a/Books/Views/Book/SearchPage.cshtml
+++ b/Books/Views/Book/SearchPage.cshtml
@@ -1,6 +1,6 @@
 ﻿
 
-<h4>Search Page</h4>
+<h4>Find a book :</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,7 +23,7 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Show me..." class="btn btn-primary" />
+                <input type="submit" value="Show me" class="btn btn-outline-success" />
             </div>
         </form>
     </div>
