--- a/Books/Views/Book/SearchPage.cshtml
+++ b/Books/Views/Book/SearchPage.cshtml
@@ -1,25 +1,20 @@
-﻿
-
-<h4>Find a book :</h4>
+﻿<h4>Find a book :</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="SearchResult">
-            
+
             <div class="form-group">
                 <label class="control-label"> By Title</label>
                 <input name="searchByTilte" class="form-control" />
-
             </div>
             <div class="form-group">
                 <label class="control-label"> By Author</label>
                 <input name="searchByAuthor" class="form-control" />
-
             </div>
             <div class="form-group">
                 <label class="control-label"> By Genre</label>
                 <input name="searchByGenre" class="form-control" />
-
             </div>
 
             <div class="form-group">
