--- a/Books/Views/Book/_OneBook.cshtml
+++ b/Books/Views/Book/_OneBook.cshtml
@@ -13,5 +13,9 @@
         <a href="Book/MoreDetails/@Model.Id" class="btn btn-primary">Tell me more</a>
         <a href="#" class="btn btn-warning">Edit this copy</a>
         <a href="Book/DeletePage/@Model.Id" class="btn btn-danger">Delete this shit</a>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#CreateNewBook">
+            Create New
+        </button>
+
     </div>
 </div>
