--- a/Books/Views/Book/CreateForm.cshtml
+++ b/Books/Views/Book/CreateForm.cshtml
@@ -31,6 +31,11 @@
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
+            </div>            
+            <div class="form-group">
+                <label asp-for="AvailableCopies" class="control-label">AvailableCopies</label>
+                <input asp-for="AvailableCopies" class="form-control" type="number" />
+                <span asp-validation-for="AvailableCopies" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Add to Books" class="btn btn-primary" />
