--- a/Books/Views/Book/Index.cshtml
+++ b/Books/Views/Book/Index.cshtml
@@ -41,6 +41,14 @@
                         <label for="Price" class="control-label">Price</label>
                         <input for="Price" class="form-control" />
                     </div>
+                    <div class="form-group">
+                        <label for="IsBooked" class="control-label">IsBooked</label>
+                        <input for="IsBooked" class="form-control" type="checkbox" />
+                    </div>
+                    <div class="form-group">
+                        <label for="AvailableCopies" class="control-label">AvailableCopies</label>
+                        <input for="AvailableCopies" class="form-control" type="number" />
+                    </div>
                 </form>
             </div>
             <div class="modal-footer">
